--- a/Tmenu/app.wxss
+++ b/Tmenu/app.wxss
@@ -1,13 +1,7 @@
 /**app.wxss**/
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+.page-container{
+    width: 100%;
+}
 view{
     font-family: PingFangSC-Regular, sans-serif;
 }
@@ -26,4 +20,20 @@ view{
 
 .txt-lg {
     font-size: 28rpx;
+}
+.arrow{
+    display: block;
+    width: 14rpx;
+    height: 14rpx;
+    border-top: 4rpx solid;
+    border-right: 4rpx solid;
+    border-color: #959595;
+    transform: rotate(45deg);
+}
+.gray{
+    color: #959595;
+}
+.b{
+    font-size: 28rpx;
+    font-weight: bold;
 }
