--- a/Tmenu/pages/confirmOrder/confirmOrder.wxml
+++ b/Tmenu/pages/confirmOrder/confirmOrder.wxml
@@ -49,7 +49,7 @@
             <form bindsubmit="formSubmit">
                 <view class="user-msg">
                     <view class="msg-title">买家留言</view>
-                    <input name="umsg" class="msg-input" placeholder="点击给卖家留言" maxlength="12"/>
+                    <input name="umsg" class="msg-input" placeholder="点击给卖家留言" maxlength="12" />
                 </view>
                 <view class="use-honbao" bindtap="chooseHonbao">
                     <view class="msg-title">使用红包</view>
@@ -91,6 +91,10 @@
                             </view>
                         </view>
                     </view>
+                </view>
+                <view class="discount-dyq discount-box bc-white">
+                    <view class="discount-detail ml txt-head">手续费</view>
+                    <view class="discount-right mr txt-red">(2%)￥{{taxPrice}}</view>
                 </view>
                 <view class="payment-info">
                     <view class="payment-title">支付方式</view>
