--- a/Tmenu/pages/transmitHB/transmitHB.wxml
+++ b/Tmenu/pages/transmitHB/transmitHB.wxml
@@ -10,7 +10,7 @@
                     <image src="../../assets/image/hb-icon.png" class="hb-img"></image>
                 </view>
             </view>
-            <view class="hb-voice-txt">皇上万岁万岁万万岁</view>
+            <view class="hb-voice-txt">XXXX店发的红包</view>
         </view>
         <view class="page-body">
             <image src="../../assets/image/hb-bc1.png" class="body-bc-img"></image>
