--- a/Tmenu/pages/finishOrder/finishOrder.wxml
+++ b/Tmenu/pages/finishOrder/finishOrder.wxml
@@ -19,21 +19,21 @@
                     <view class="hb-info-img bcenter">
                         <image src="../../assets/image/hb-kai.png" class="hb-kai-img"></image>
                     </view>
-                    <view class="hb-info-count bcenter">￥20.00</view>
+                    <view class="hb-info-count bcenter">￥{{mode_money}}</view>
                     <view class="hb-info-des bcenter">红包个数随机，转发就能领一份</view>
                 </view>
                 <view class="play-hb">
                     <form bindsubmit="formSubmit">
                         <view class="play-set-txt">
                             <view class="play-set-title">设置口令</view>
-                            <input placeholder="谢谢老板" maxlength="10" class="txt-input" />
+                            <input name="utxt" placeholder="谢谢老板" maxlength="10" class="txt-input" />
                         </view>
                         <view class="play-notice">
                             <view class="notice-title">小伙伴们说对口令就能获得随机的打赏</view>
                             <image src="../../assets/image/example-voice.png" class="example-voice-img" bindtap="gotoExample"></image>
                         </view>
                         <view class="play-btn">
-                            <button type="primary" form-type="submit" class="play-btn">调戏一下好友们</button>
+                            <button type="primary" disabled="{{is_dilivery?true:false}}" form-type="submit" class="play-btn">调戏一下好友们</button>
                         </view>
                     </form>
                 </view>
