--- a/Tmenu/pages/index/index.wxml
+++ b/Tmenu/pages/index/index.wxml
@@ -6,9 +6,9 @@
                 <image src="../../assets/image/shop-logo.jpg" class="shop-logo-img"></image>
             </view>
             <view class="shop-detail">
-                <view class="shop-name">寻味-园丁街店</view>
+                <view class="shop-name">真功夫-万达店</view>
                 <view class="shop-add">
-                    <view class="shop-add-txt gray b">浙江省宁波市江东区园丁街128号</view>
+                    <view class="shop-add-txt gray b">湖南省长沙市湘江中路128号</view>
                     <view class="shop-add-arrow arrow"></view>
                 </view>
                 <view class="shop-runtime gray b">营业时间：周一至周日08:00至次日07:30</view>
@@ -20,7 +20,7 @@
                 <view class="menu-item-logo">
                     <image src="../../assets/image/menu-icon1.png" class="menu-item-img"></image>
                 </view>
-                <view class="menu-item-txt b gray">点外卖</view>
+                <view class="menu-item-txt b gray">菜谱</view>
             </view>
             <view class="menu-item" bindtap="call">
                 <view class="menu-item-logo">
