--- a/Tmenu/pages/menu/menu.wxml
+++ b/Tmenu/pages/menu/menu.wxml
@@ -7,11 +7,11 @@
                 </view>
                 <view class="page-head-detail">
                     <view class="page-head-title-box">
-                        <view class="page-head-title white txt-mid">寻味-园丁街店</view>
+                        <view class="page-head-title white txt-mid">真功夫-万达店</view>
                         <view class="arrow white arrow-title"></view>
                     </view>
                     <view class="page-head-notice white txt-small">
-                        公告: 联系电话(微信)15957496790，超出范围五份起送！
+                        公告: 联系电话0731-85056818，超出范围五份起送！
                     </view>
                     <view class="page-head-notice white txt-small">
                         可送公司餐，团餐定制，团购餐
