--- a/X-admin/css/xadmin.css
+++ b/X-admin/css/xadmin.css
@@ -20,7 +20,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     color: #ffffff;
-	transition: all 2s ease;
+	transition: all 3s ease;
 }
 /*layer弹出层背景设置*/
 
@@ -126,7 +126,7 @@ body{
 	width: 100%;
 	padding-top: 70px;
 	height: 50px;
-	margin-top: 60px;
+	margin-top: 1em;
 }
 .login-logo h1{
 	color: #fff;
@@ -140,7 +140,7 @@ body{
     background-color: rgba(0, 0, 0, 0.25);
     border: 1px solid rgba(255,255,255, 0.3);
     margin: 0 auto;
-	margin-top: 80px;
+	margin-top: 3em;
 }
 .login-box h3{
 	font-weight: 300;
@@ -290,7 +290,7 @@ body{
 	display: table;
 	position: relative;
 	width: 100%;
-	height: calc(100% - 114px);
+	height: 100%;
 }
 .wrapper .left-nav{
 	background-color: rgba(0, 0, 0, 0.20);
