--- a/X-admin/css/xadmin.css
+++ b/X-admin/css/xadmin.css
@@ -378,7 +378,7 @@ xblock{
 }
 
 .footer{
-	position: fixed;
+	position: relative;
 	bottom: 0;
 	width: 100%;
 	background-color: rgba(0, 0, 0, 0.25);
