--- a/X-admin/lib/layui/css/layui.css
+++ b/X-admin/lib/layui/css/layui.css
@@ -244,7 +244,7 @@ a cite{font-style: normal; *cursor:pointer;}
 .layui-table tr{transition: all .3s; -webkit-transition: all .3s;}
 .layui-table thead tr{background-color: rgba(0,0,0,0.4);}
 .layui-table th{text-align: center;}
-.layui-table th, .layui-table td{padding: 9px 15px; min-height: 20px; line-height: 20px; border: 1px solid rgba(255,255,255,0.2); font-size: 14px;text-align: center;}
+.layui-table th, .layui-table td{text-align:center;padding: 9px 15px; min-height: 20px; line-height: 20px; border: 1px solid rgba(255,255,255,0.2); font-size: 14px;}
 .layui-table[lay-even] tr:nth-child(even),
 .layui-table tr:hover{background-color: rgba(0,0,0,0.4);}
 
