--- a/Tmaster/pages/index/index.wxss
+++ b/Tmaster/pages/index/index.wxss
@@ -1,21 +1,15 @@
-/**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
 
-.userinfo-nickname {
-  color: #aaa;
+.get-phone-no{
+    position: absolute;
+    top: 38%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
-
-.usermotto {
-  margin-top: 200px;
+.txt{
+    text-align: center;
+}
+.btn{
+    margin-top: 50rpx;
+    width: 500rpx;
 }
