--- a/Tmenu/pages/index/index.wxss
+++ b/Tmenu/pages/index/index.wxss
@@ -12,7 +12,7 @@
 .page-container{
     background: #1a191f;
     width: 100%;
-    height: 3680rpx;
+     /* height: 3670rpx;  */
 }
 .page-section{
     position: absolute;
@@ -21,7 +21,7 @@
     flex-direction: column;
     background: #fff;
     width: 100%;
-    height: 3680rpx;
+     /* height: 3670rpx;  */
     opacity: 0;
 }
 .shop-info{
@@ -51,8 +51,8 @@
 }
 .shop-add{
     position: relative;
-    margin-top: 52rpx;
-    margin-bottom: 40rpx;
+    margin-top: 36rpx;
+    margin-bottom: 20rpx;
 }
 .shop-add-txt{
     display: inline-block;
@@ -333,4 +333,18 @@
     border-top: 2rpx solid #fff;
     border-right: 2rpx solid #fff;
     transform: rotate(45deg);
+}
+.shop-voice-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 26rpx;
+}
+.service-voice-img{
+    margin-left: 10rpx;
+    width: 100rpx;
+    height: 40rpx;
+}
+.shop-voice-title{
+    font-size: 24rpx;
 }
